maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:1: error: Missing closing brace `}' assumed here
override def run() {
^Escaper:1: error: expected start of definition
override def run() {
         ^Escaper:8: error: expected class or object definition
def GaucheMur(){
^